# lotto

./: .env.example  .gitignore  CHANGELOG.md  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
.claude/: settings.json
.moai/: manifest.json
.moai/project/: interview.md  product.md  structure.md  tech.md
.moai/reports/: session-0479ac68-57b3-41e3-9755-9bb9eebec5ef.md  session-4a760d32-1387-4594-87d5-1613d355e9e1.md  session-50afa3bb-b825-4596-83b4-546763f38515.md  (+10 more)
lotto/: __init__.py  analyzer.py  collector.py  config.py  excel_parser.py  models.py  pdf_report.py  playwright_collector.py  purchase.py  recommender.py  scraper.py  simulator.py  user_settings.py
tests/: conftest.py  test_ac_analysis.py  test_ac_value.py  test_ac_value_analysis.py  test_affinity_page.py  test_alternation_analysis.py  test_analyzer.py  test_api_affinity.py  test_api_compare.py  test_api_consecutive.py  test_api_cycle.py  test_api_number_trend.py  test_api_pagination.py  test_api_prediction.py  test_api_range_stats.py  test_api_scraper_worker.py  test_api_sim_history.py  test_api_stats_overview.py  test_api_strategy_filter.py  test_api_sum_range.py  test_api_yearly_prize.py  test_app_lifespan.py  test_backtest.py  test_bonus_analysis.py  test_bonus_api.py  test_bonus_avoidance.py  test_bonus_stats.py  test_carryover.py  test_catalan.py  test_check.py  test_cli.py  test_cli_integration.py  test_cli_web.py  test_cluster_analysis.py  test_collect_summary.py  test_collector.py  test_collector_append.py  test_collector_atomic.py  test_collector_gaps.py  test_collector_sync_meta.py  (+195 more)
(+541 files in other folders)
