[project]
name = "lotto"
version = "0.1.0"
description = "로또 번호 추천 프로그램 (통계 기반)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests>=2.31,<3.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<2.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    "fastapi>=0.115",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "aiofiles>=23.2",
    "httpx>=0.27",
    "fpdf2>=2.7",
    "apscheduler>=3.10,<4.0",
]

[project.scripts]
lotto = "main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "--cov=lotto",
    "--cov=main",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "-v",
]

[tool.coverage.run]
branch = true
source = ["lotto", "main"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<5.0",
    "pytest-asyncio>=0.23",
    "requests-mock>=1.11,<2.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pandas-stubs>=2.1",
]
